fixing sound fx to work on mobile browsers

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
   }
 
   .overlay-text {
-    bottom: 7%;
+    bottom: 4%;
   }
 
   @keyframes overlay-grow {
